--- a/.firebaserc
+++ b/.firebaserc
@@ -1,7 +1,7 @@
 {
   "projects": {
-    "default": "shopping-list-c9f40",
-    "new-server": "easyshopping-list"
+    "default": "easyshopping-list",
+    "old-server": "shopping-list-c9f40"
   },
   "targets": {},
   "etags": {}
